--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="about_me">Hello, I\'m Monwar Jahan, and welcome to my rendition of the News Views App. Swipe Left to explore more of this app</string>
     <string name="more">Let\'s Explore More Of This App</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
